--- a/pyproject.toml
+++ b/pyproject.toml
@@ -13,6 +13,9 @@ bs4 = "^0.0.1"
 pylint = "^2.12.2"
 bandit = "^1.7.2"
 flake8 = "^4.0.1"
+jupyter = "^1.0.0"
+aiohttp = "^3.8.1"
+aiofile = "^3.7.4"
 
 [tool.poetry.dev-dependencies]
 
